🎿👌 Checkpoint ./public/index.html:21845626/101 ./public/css/style.css:21845626/221

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <h1>
       Your Work Advisor
     </h1>
+    <section class="flexbox">
     <form action="">
       <label for="yourtask" class="headers"> Task </label><br />
       <input
@@ -45,7 +46,8 @@
       </p>
       <button class="submit">Add Task</button>
     </form>
-    <br />
+
+      </section>    <br />
 
     <table id="toDoTable">
       <tr>
