--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,55 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script src="/js/scripts.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <h1 class="title">TODO</h1>
+
+      <label for="task-title">
+      Task Name
+      <input type='text' id='taskName' placeholder="">
+      </label>
+
+      <label for="description">
+      Description
+      <input type='text' id='taskDesc' placeholder="">
+      </label>
+
+      <div class="submitRow">
+      <label for="priority">
+      Priority
+      <select id='prio'>
+        <option value="low">Low </option>
+        <option value="medium">Medium </option>
+        <option value="high">High </option>
+      </select>
+      </label>
+
+      <button>Add</button>
+    </div>
     </form>
+
+    <div> </div>
+    <div>
+        <h1>Tasks</h1>
+        <table>
+          <thread>
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>Priority</th>
+              <th>Due Date</th>
+            </tr>
+          </thread>
+          <tbody id="tasks"></tbody>
+        </table>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
