finalized design and fuctionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <body>
     <link rel="stylesheet" href="/css/style.css">
     <h1 class="title">Fishing Log</h1>
+    <audio id="myAudio">
+      <source src="FishOn.mp3" type="audio/mp3">
+    </audio>
     <form>
       <center>
         <input type="text" id="anglername" placeholder="angler name">
