--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <ul id="myUL"></ul>
 
     <div class="flex-container" id="fbox">
-      <div>Completed Tasks</div>
+      <div>Finished Tasks</div>
     </div>
   </body>
   <script>
