--- a/public/index.html
+++ b/public/index.html
@@ -45,31 +45,33 @@
         <label for="priority3" id="low"> Low Priority </label><br /><br />
     </li>
     <li class="form-row">
-      <button type="submit" class="submit">Create task</button>
+      <button type="submit" class="submit">Create</button>
     </li>
   </ul>    </form>
 
    <br />
 
-    <table 
+    <table  id="toDoTable"
       <tr>
-        <        <th>Task</th>
+        <<th>Creation Date</th>        <th>Task</th>
         <th>Priority</th>
         <th>Advice</th>
       </tr>
       <tbody id="taskBody"></tbody>
     </table>
     <script>
-      function addRows(json) {
-        const tableBody = document.getElementById("taskBody");
-        let row = tableBody.insertRow(0);
+      function aaddRowsjson) {
+         //Find the table
+       const tableBody = document.getElementById("taskBody");
+         //Insert a new row and then new cells
+       let row = tableBody.insertRow(0);
         let ccll1 = row.insertCell(0);
         let cell2 = row.insertCell(1);
         let cell3 = row.insertCell(2);
         let cell4 = row.insertCell(3);
 
-        //Fill those cells with the data gotten back from the server, this includes the new fields
-        row.insertCell(0).innerHTML = json.date;
+         //Fill those cells with the data gotten back from the server, this includes the new fields
+       row.insertCell(0).innerHTML = json.date;
         row.insertCell(1).innerHTML = json.yourtask;
         row.insertCell(2).innerHTML = json.priority;
         row.insertCell(3).innerHTML = json.message;
@@ -77,8 +79,8 @@
       }
 
       const submit = function(e) {
-        // prevent default form action from being carried out
-        e.preventDefault();
+         // prevent default form action from being carried out
+       e.preventDefault();
 
         function displayRadioValue() {
           var ele = document.getElementsByName("priority");
@@ -104,7 +106,7 @@
         })
           .then(response => response.json())
           .then(function(response) {
-            addRows(response);
+            aaddRowsresponse);
           });
 
         return false;
