--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
   </head>
@@ -12,75 +15,68 @@
     </h1>
     <form action="">
       <ul class="wrapper">
-    <li class="form-row">
-      <label for="yourtask">Task</label>
-      <input type="text" id="yourtask">
-    </li>
-    <li class="form-row">
-      <label for="taskduedate">Due Date and Time</label>
-      <input type="datetime-local" id="taskduedate">
-    </li>
-    <li class="form-row">
-      <label>Priority</label>
-      <input
-          type="radio"
-          id="priority1"
-          name="priority"
-          value="high_priority"
-        />
-        <label for="priority1" id="high"> High Priority </label><br />
-        <input
-          type="radio"
-          id="priority2"
-          name="priority"
-          value="med_priority"
-        />
-        <label for="priority2" id="med"> Medium Priority </label><br />
-        <input
-          type="radio"
-          id="priority3"
-          name="priority"
-          value="low_priority"
-        />
-        <label for="priority3" id="low"> Low Priority </label><br /><br />
-    </li>
-    <li class="form-row">
-      <button type="submit" class="submit">Create</button>
-    </li>
-  </ul>    </form>
+        <li class="form-row">
+          <label for="yourtask">Task</label>
+          <input type="text" id="yourtask" />
+        </li>
+        <li class="form-row">
+          <label for="taskduedate">Due Date and Time</label>
+          <input type="datetime-local" id="taskduedate" />
+        </li>
+        <li class="form-row">
+          <label>Priority</label>
+          <input
+            type="radio"
+            id="priority1"
+            name="priority"
+            value="high_priority"
+          />
+          <label for="priority1" id="high"> High Priority </label><br />
+          <input
+            type="radio"
+            id="priority2"
+            name="priority"
+            value="med_priority"
+          />
+          <label for="priority2" id="med"> Medium Priority </label><br />
+          <input
+            type="radio"
+            id="priority3"
+            name="priority"
+            value="low_priority"
+          />
+          <label for="priority3" id="low"> Low Priority </label><br /><br />
+        </li>
+        <li class="form-row">
+          <button class="submit">Add Task</button>
+        </li>
+      </ul>
+    </form>
+    <br />
 
-   <br />
-
-    <table  id="toDoTable"
+    <table id="toDoTable">
       <tr>
-        <<th>Creation Date</th>        <th>Task</th>
+        <th>Due Date</th>
+        <th>Task</th>
         <th>Priority</th>
         <th>Advice</th>
       </tr>
       <tbody id="taskBody"></tbody>
     </table>
     <script>
-      function aaddRowsjson) {
-         //Find the table
-       const tableBody = document.getElementById("taskBody");
-         //Insert a new row and then new cells
-       let row = tableBody.insertRow(0);
-        let ccll1 = row.insertCell(0);
-        let cell2 = row.insertCell(1);
-        let cell3 = row.insertCell(2);
-        let cell4 = row.insertCell(3);
+      function updateTable(json) {
+        const tableBody = document.getElementById("taskBody");
+        let update = tableBody.insertRow(0);
 
-         //Fill those cells with the data gotten back from the server, this includes the new fields
-       row.insertCell(0).innerHTML = json.date;
-        row.insertCell(1).innerHTML = json.yourtask;
-        row.insertCell(2).innerHTML = json.priority;
-        row.insertCell(3).innerHTML = json.message;
-        console.log("got here");
+        update.insertCell(0).innerHTML = json.date;
+        update.insertCell(1).innerHTML = json.yourtask;
+        update.insertCell(2).innerHTML = json.priority;
+        update.insertCell(3).innerHTML = json.message;
       }
 
       const submit = function(e) {
-         // prevent default form action from being carried out
-       e.preventDefault();
+        // prevent default form action from being carried out
+        e.preventDefault();
 
         function displayRadioValue() {
           var ele = document.getElementsByName("priority");
@@ -106,7 +102,7 @@
         })
           .then(response => response.json())
           .then(function(response) {
-            aaddRowsresponse);
+            updateTable(response);
           });
 
         return false;
