--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
       <button id="delete">delete</button>
     </form>
 
-    <table>
-      <tr><th>Username----</th><th>Guess----</th><th>Status----</th><th>Total Attempts----</th><th>Most Recent Submission----</th></tr>
-      <tr><td>placeholder</td><td>12</td><td>Too High</td><td>921</td><td>09/15/2020</td></tr>
+    <table id="activeUsersTable">
+      <thead><tr><th>Username----</th><th>Guess----</th><th>Status----</th><th>Total Attempts----</th><th>Most Recent Submission----</th></tr></thead>
+      <tbody id="activeUsersList"></tbody>
     </table>
 
   </body>
