--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
       <div id="navbar">
         <h1 id="logo"><i class="fas fa-book-open"></i> MyReadingList</h1>
         <span id="links">
-          <a href="#top">Add Books</a>
+          <a href="#content">Add Books</a>
           <a href="#book-table">Book List</a>
         </span>
       </div>
       <div id="content">
-        <h1 id="header-title" name="top">My<span>Reading</span>List</h1>
+        <h1>My<span>Reading</span>List</h1>
         <p id="header-text">What are you reading now?</p>
         <div id="book-form">
           <form>
@@ -64,7 +64,7 @@
         </div> <!-- id="book-form" -->
         <div id="book-table">
           <h1 id="book-shelf">Book Shelf</h1>
-          <table id="book-table">
+          <table>
             <thead>
               <tr>
                 <th><span>Title</span></th>
