Moved things to server side and changed default code.

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
         <p id="inputname"class="postgame">
           Please input your name:
         </p>
-        <input type='text' id='yourname' class='postgame' value="">
-        <input type="button" id='submitbtn' class='postgame' onclick="submit()" value="Submit"></input>
+        <input type='text' id='yourname' name='yourname' class='postgame' value="">
+        <input type="button" id='submitbtn' class='postgame' action="/submit" onclick="submit()" value="Submit"></input>
       </form>
     </div>
 
