added ui achievement to README, fixed html warnings

--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,13 @@
       <br>
       <p>Happy birthday! Birthdays come around every year, but friends like you can only be found once in a lifetime. Wishing you a fabulous birthday! Hope your birthday is as wonderful and extraordinary as you are.</p>
       <br>
-      <h2>Love, &nbsp;</em><span class='cardYourName' contenteditable>your_name</span></h2>
+      <h2>Love, &nbsp;<span class='cardYourName' contenteditable>your_name</span></h2>
     </div>
       </div>
       <div class="boundary"></div>
 
     </div>
-  
+    <script src="js/scripts.js"></script>
   </body>
-  <script src="js/scripts.js"></script>
+  
 </html>
