--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <script src="js/scripts.js"></script>
+    <img />
+    <div class="container">
+      <form action="">
+        <input type="text" id="title" placeholder="Book Title" />
+        <input type="number" id="pages" placeholder="# of Pages" min="1" />
+        <button>submit</button>
+      </form>
+      <table id="booklist">
+        <tr>
+          <th scope="col">Book Title</th>
+          <th scope="col">Book Length</th>
+          <th scope="col">Hours to Read</th>
+        </tr>
+      </table>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
