I don't know waht i'm doing now

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
           Please input your name:
         </p>
         <input type='text' id='yourname' name='yourname' class='postgame' value="">
-        <input type="button" id='submitbtn' class='postgame' method="POST" action="/submit" onclick="submitClicked()" value="Submit"></input>
+        <input type="button" id='submitbtn' class='postgame' method="POST" action="/submit" value="Submit"></input>
       </form>
     </div>
 
     <div>
-      <table style="width:auto" id='highscores'>
+      <table id='scoretable' style="width:auto">
       <tr>
         <th>Placing</th>
         <th>Player Name</th>
