--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           Please input your name:
         </p>
         <input type='text' id='yourname' name='yourname' class='postgame' value="">
-        <input type="button" id='submitbtn' class='postgame' method="POST" action="/submit" value="Submit"></input>
+        <button  id='submitbtn' class='postgame' method="POST" action="/submit" >Submit</button>
       </form>
     </div>
 
