--- a/public/index.html
+++ b/public/index.html
@@ -3,86 +3,123 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <script src="scripts.js"></script>
   </head>
-  <body>
-    <div class="headerOne">
-      <h1> To Do List <h2>
+    <body>
+      <div class="flex-container">
+          <h1>
+            To Do List
+          </h1>
+          <form action="" name="form1">
+            <div class="form">
+              <input class="inputs" type="text" id="taskname" value="Name">
+              <input class="inputs" type="text" id="taskpriority" value="Priority">
+              <input class="inputs" type="text" id="taskdeadline" value="Task deadline">
+            </div>
+            <br>
+            <div class="buttons" id="action" name="action">
+              <button id="add" value="add">Add Task</button>
+              <button id="delete" value="delete">Delete previous task</button>
+              <button id="edit" value="edit">Edit task</button>
+            </div>
+          </form>
+
+      <br>
+      <table id="tableOne">
+        <tr>
+          <td>Task Name</td>
+          <td>Task Priority</td>
+          <td>Deadline of task</td>
+        </tr>
+      </table>
     </div>
-
-    <div class="task">
-      <h2> Enter your to-do task </h2>
-
-      <form name "task-form" action="/server.improved.js">
-        <div class="input-task">
-          <div class="input">
-            <label for="name"> Task Name:</label>
-            <input type="text" id="name" value="" required>
-          </div>
-
-
-
-    </div>
-
-    <form action="">
-
-      <input type='text' id='yourname' value="your name here">
-
-      <button>submit</button>
-
-
-
-
-
-    </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </body>
+</body>
   <script>
 
-  const submit = function( e ) {
+  var nameTaskArr = ["go grocery shopping", "finish math homework"]
+  var taskPriorArr = ["medium", "high"]
+  var taskDeadlineArr = ["Thursday", "Wednesday"]
+
+
+function addToTable(data) {
+  //find table
+  const table = document.getElementById("tableOne");
+
+  let row = table.insertRow(-1);
+  var cell1 = row.insertCell(0);
+  var cell2 = row.insertCell(1);
+  var cell3 = row.insertCell(2);
+
+  cell1.innerHTML = data.taskname;
+  cell2.innerHTML = data.taskpriority;
+  cell3.innerHTML = data.taskdeadline;
+
+}
+
+
+const submit = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const nameInput = document.querySelector('#taskname'),
+          priorityInput = document.querySelector('#taskpriority'),
+          deadlineInput = document.querySelector('#taskdeadline'),
+          actionInput = document.querySelector('#action')
 
-    fetch( '/submit', {
+    var json;
+    var body;
+
+    if(actionInput.value == "add") {
+      json = {action: "add", taskname: nameInput.value, taskpriority: priorityInput.value, taskdeadline: deadlineInput.value}
+      body = JSON.stringify(json)
+    }
+
+    else if(actionInput.value == "edit") {
+      json = {action: "edit", taskname: nameInput.value, taskpriority: priorityInput.value, taskdeadline: deadlineInput.value}
+      console.log(json)
+    }
+
+    else {
+      json = {action: "delete", taskname: nameInput.value, taskpriority: priorityInput.value, taskdeadline: deadlineInput.value}
+    }
+    console.log(JSON.stringify(json))
+    fetch('/submit', {
       method:'POST',
       body
     })
     .then( function( response ) {
       // do something with the reponse
-      console.log( response )
+      var stringResponse = JSON.parse(response)
+      console.log(stringResponse)
+
+      addToTable(stringResponse)
+      return response.json()
+    }).then( function(data){
+
+      nameTaskArr = []
+      taskPriorArr = []
+      taskDeadlineArr = []
+      // for(let objData in data.objs) {
+      appdata.Name = nameTaskArr
+      appdata.Priority = taskPriorArr
+      appdata.Deadline = taskDeadlineArr
+
     })
+
 
     return false
   }
 
   window.onload = function() {
-    const button = document.querySelector( 'button' )
+    const button = document.querySelector( '#add' )
     button.onclick = submit
+    // const button2 = document.querySelector( '#delete' )
+    // button2.onclick = delete
+    // const button3 = document.querySelector( '#edit' )
+    // button3.onclick = edit
+
   }
 
   </script>
