added ability to edit and delete players

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,13 @@
           <input type='number' id='goals'>
           <label for='assists'> Assists: </label>
           <input type='number' id='assists'><br>
-          <button>Add Player</button>
+          
+          <div>
+            <button id="add">Add Player</button>
+            <button id="delete">Delete Previous Player</button>
+            <button id="edit">Edit Player</button>
+          </div>
+          
         </form>
       </div>
 
