--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   <div class="hiddenForm">
     <div class="form-popup" id="modifyForm">
-      <form action="" class="form-container" novalidate>
+      <form class="form-container" novalidate>
         <h1>Modify your data</h1>
         <div class="form-group">
           <label for="name"><b>Name</b></label>
@@ -63,7 +63,7 @@
   <div class="info-container">
     <div id="information" style = "width: 1000px">
       <div id = "intro">
-        <h1><center>Not-to-Use-Password Generator</center></h1>
+        <center><h1>Not-to-Use-Password Generator</h1></center>
       </div>
       <div class="row">
         <div class = "col-3">
@@ -106,7 +106,6 @@
           </form>
         </div>
         <div class = "col-9">
-          <h2></h2>
           <table class="table table-striped table-active" id="password_table">
             <thead>
               <tr>
@@ -126,7 +125,7 @@
   </div>
 </body>
 
-<script src = 'js/scripts.js'></script>
+<script src='js/scripts.js'></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!--   Bootstrap JS -->
