--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,38 @@
     <head>
         <title>CS4241 Assignment 2</title>
         <meta charset="utf-8" />
-        <style>
-            table,
-            th,
-            td {
-                border: 1px solid black;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style.css" />
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
-        <h2>Movies to watch</h2>
-        <form action="">
-            <input type="text" id="movie" value="Movie Name" />
-            <label for="seen">Seen?</label>
-            <input type="checkbox" id="seen" name="Seen" />
-            <button>submit</button>
-        </form>
-        <table id="movieTable">
-            <tr>
-                <th>movie</th>
-                <th>seen</th>
-                <th>url</th>
-            </tr>
-        </table>
+        <div class="wrapper">
+            <div class="one">
+                <h2>Movies Watch List</h2>
+            </div>
+
+            <div class="two">
+                <form action="">
+                    <input type="text" id="movie" value="Movie Name" />
+                    <label for="seen">Seen?</label>
+                    <input type="checkbox" id="seen" name="Seen" />
+                    <button class="btn">submit</button>
+                </form>
+            </div>
+
+            <div class="three">
+                <table id="movieTable">
+                    <tr>
+                        <th>movie</th>
+                        <th>seen</th>
+                        <th>url</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </body>
     <script>
         const updateTable = function () {
