--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <body>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="js/scripts.js"></script>
-    <img />
+    
+    <img src="images/books.jpg" alt="an open book" width="100%" height="300px"/>
     <div class="container">
       <form action="">
         <input type="text" id="title" placeholder="Book Title" />
