--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,56 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
             rel="stylesheet"
         />
+        <script>
+            const updateTable = function () {
+                fetch("/data", {
+                    method: "GET",
+                })
+                    .then(function (response) {
+                        return response.json();
+                    })
+                    .then(function (data) {
+                        console.log(data);
+                        document.getElementById("movieTable").innerHTML = "";
+                        document.getElementById("movieTable").innerHTML =
+                            "<tr><th>movie</th><th>seen</th><th>url</th></tr>";
+
+                        data.map((item) => {
+                            let a = document
+                                .getElementById("movieTable")
+                                .insertRow();
+                            a.innerHTML = `<td>${item.name}</td><td>${item.seen}</td><td><a href="${item.url}">${item.url}</a></td>`;
+                        });
+                    });
+            };
+
+            const submit = function (e) {
+                // prevent default form action from being carried out
+                e.preventDefault();
+
+                const seen = document.querySelector("#seen"),
+                    movie = document.querySelector("#movie"),
+                    json = { movie: movie.value, seen: seen.checked },
+                    body = JSON.stringify(json);
+
+                fetch("/submit", {
+                    method: "POST",
+                    body,
+                }).then(function (response) {
+                    // do something with the reponse
+                    console.log(response);
+                });
+
+                updateTable();
+                return false;
+            };
+
+            window.onload = function () {
+                updateTable();
+                const button = document.querySelector("button");
+                button.onclick = submit;
+            };
+        </script>
     </head>
     <body>
         <div class="wrapper">
@@ -17,7 +67,7 @@
             </div>
 
             <div class="two">
-                <form action="">
+                <form>
                     <input type="text" id="movie" value="Movie Name" />
                     <label for="seen">Seen?</label>
                     <input type="checkbox" id="seen" name="Seen" />
@@ -36,54 +86,4 @@
             </div>
         </div>
     </body>
-    <script>
-        const updateTable = function () {
-            fetch("/data", {
-                method: "GET",
-            })
-                .then(function (response) {
-                    return response.json();
-                })
-                .then(function (data) {
-                    console.log(data);
-                    document.getElementById("movieTable").innerHTML = "";
-                    document.getElementById("movieTable").innerHTML =
-                        "<tr><th>movie</th><th>seen</th><th>url</th></tr>";
-
-                    data.map((item) => {
-                        let a = document
-                            .getElementById("movieTable")
-                            .insertRow();
-                        a.innerHTML = `<td>${item.name}</td><td>${item.seen}</td><td><a href="${item.url}">${item.url}</a></td>`;
-                    });
-                });
-        };
-
-        const submit = function (e) {
-            // prevent default form action from being carried out
-            e.preventDefault();
-
-            const seen = document.querySelector("#seen"),
-                movie = document.querySelector("#movie"),
-                json = { movie: movie.value, seen: seen.checked },
-                body = JSON.stringify(json);
-
-            fetch("/submit", {
-                method: "POST",
-                body,
-            }).then(function (response) {
-                // do something with the reponse
-                console.log(response);
-            });
-
-            updateTable();
-            return false;
-        };
-
-        window.onload = function () {
-            updateTable();
-            const button = document.querySelector("button");
-            button.onclick = submit;
-        };
-    </script>
 </html>
