--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   <div class="hiddenForm">
     <div class="form-popup" id="modifyForm">
-      <form class="form-container" novalidate>
+      <form action="#" class="form-container" novalidate>
         <h1>Modify your data</h1>
         <div class="form-group">
           <label for="name"><b>Name</b></label>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group">
-          <label for="year"><b>College Year</b></label>
+          <label><b>College Year</b></label>
           <select class="form-control" id="mCollegeyear">
             <option>Freshman</option>
             <option>Sophomore</option>
@@ -63,11 +63,11 @@
   <div class="info-container">
     <div id="information" style = "width: 1000px">
       <div id = "intro">
-        <center><h1>Not-to-Use-Password Generator</h1></center>
+        <h1>Not-to-Use-Password Generator</h1>
       </div>
       <div class="row">
         <div class = "col-3">
-          <form class = "needs-validation" novalidate action>
+          <form action="#" class = "needs-validation" novalidate>
             <div class="form-group">
               <label for="name"><b>Name</b></label>
               <input type="text" class="form-control" id="name" placeholder="Enter your name here" required>
@@ -83,7 +83,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="year"><b>College Year</b></label>
+              <label><b>College Year</b></label>
               <select class="form-control" id="collegeyear">
                 <option>Freshman</option>
                 <option>Sophomore</option>
@@ -123,16 +123,16 @@
       </div>
     </div>
   </div>
+
+  <script src="js/scripts.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!--   Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
-
-<script src='js/scripts.js'></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<!--   Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </html>
