--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,61 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kufam">
   <link rel="stylesheet" href="/css/style.css">
+  <script>
+    const submit = function (e) {
+      // prevent default form action from being carried out
+      e.preventDefault()
+  
+      const nameinput = document.querySelector('#yourname'),
+        scoreinput = document.querySelector('#score'),
+        locationinput = document.querySelector('#location'),
+        table = document.getElementById('scoretable'),
+        json = { yourname: nameinput.value, score: scoreinput.value, location: locationinput.value, position: '' },
+        body = JSON.stringify(json)
+  
+      fetch('/submit', {
+        method: 'POST',
+        body
+      })
+        .then((appdata) => appdata.json())
+        .then((json) => {
+          addToTable(json);
+        })
+  
+        return false
+    }
+         const addToTable = (data) => {
+           const scoretable = document.getElementById('scoretable');
+           scoretable.innerHTML = '';
+           data.forEach(element => {
+             scoretable.innerHTML += `
+             <tr>
+                <td class='positiondata'>${element.position}</td>
+                <td class='namedata'>${element.yourname}</td>
+                <td class='scoredata'>${element.score}</td>
+                <td class='locationdata'>${element.location}</td>
+              </tr>
+              `;
+           });
+           
+           }
+  
+    window.onload = function () {
+      const button = document.querySelector('button')
+      button.onclick = submit
+      fetch('/load')
+      .then((appdata) => appdata.json())
+        .then((json) => {
+          addToTable(json);
+        })
+      }
+  </script>
 </head>
 
 <body>
   <h1 class="heading">Game High Scores!</h1>
-  <p>Please enter your initials, score, location here:</p>
-  <form action="" id='form'>
+  <p>Please enter your initials, score, and location here:</p>
+  <form id='form'>
     <input type='text' maxlength="3" id='yourname' value="AAA">
     <input type="number" id='score' value="000000">
     <input type='text' id='location' value='your location here'>
@@ -30,55 +79,4 @@
     </tbody>
   </table>
 </body>
-<script>
-
-  const submit = function (e) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const nameinput = document.querySelector('#yourname'),
-      scoreinput = document.querySelector('#score'),
-      locationinput = document.querySelector('#location'),
-      table = document.getElementById('scoretable'),
-      json = { yourname: nameinput.value, score: scoreinput.value, location: locationinput.value, position: '' },
-      body = JSON.stringify(json)
-
-    fetch('/submit', {
-      method: 'POST',
-      body
-    })
-      .then((appdata) => appdata.json())
-      .then((json) => {
-        addToTable(json);
-      })
-
-      return false
-  }
-       const addToTable = (data) => {
-         const scoretable = document.getElementById('scoretable');
-         scoretable.innerHTML = '';
-         data.forEach(element => {
-           scoretable.innerHTML += `
-           <tr>
-              <td class='positiondata'>${element.position}</td>
-              <td class='namedata'>${element.yourname}</td>
-              <td class='scoredata'>${element.score}</td>
-              <td class='locationdata'>${element.location}</td>
-            </tr>
-            `;
-         });
-         
-         }
-
-  window.onload = function () {
-    const button = document.querySelector('button')
-    button.onclick = submit
-    fetch('/load')
-    .then((appdata) => appdata.json())
-      .then((json) => {
-        addToTable(json);
-      })
-    }
-</script>
-
 </html>
