--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,55 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/scripts.js"></script>
+    <link rel="shortcut icon" href="#">
   </head>
   <body>
+  <br><br>
+  <div class="grid-container">
+  <div id="first" class="grid-item">
+    <br><h1>
+    Nike Running Club New Member Sign up
+    </h1><br>
+    <h3>
+      Welcome to the NRC! We are happy to see a new runner and can't wait to see you run, but before we get jogging we'll need some infromation from you.
+    </h3><br>
+  </div><br>
+  <br><div id="second" class="grid-item"><br>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <br><fieldset class="grid-container">
+    <label><br>
+    <input type='text' id='username' placeholder="Username"></label><br />
+    <label><br>
+    <input type='text' id='firstname' placeholder="First Name"></label><br />
+    <label><br>
+    <input type='text' id='lastname' placeholder="Last Name"></label><br />
+    <label><br>
+    <input type='text' id='dateofbirth' placeholder="MM/DD/YYYY (DoB)"></label><br />
+      <br><button>SUBMIT</button><br />
+    </fieldset><br>
     </form>
+    <br><table id='members'>
+      <thead>
+      <tr>
+        <th colspan=5>Members List</th>
+      </tr>
+      <tr>
+        <th>Username</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Date of Birth</th>
+        <th>Age</th>
+      </tr>
+      </thead>
+      <tbody id="membersB">
+      </tbody>
+    </table><br><br>
+    </div>
+  </div>
+  <div id="third" class="grid-container"></div>
+
+
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
-</html>
+  </html>
